# xarm-sim

./: .gitignore  .gitmodules  AGENTS.md  README.md  main.py  pyproject.toml  xarm7_standalone.urdf
assets/: left_finger_black.glb  left_finger_black.mtl  left_inner_knuckle_black.glb  left_outer_knuckle_black.glb  right_finger_black.glb  right_inner_knuckle_black.glb  right_outer_knuckle_black.glb
docs/: EVAL_0709_FINDINGS.md  GRASP_TELEPORT_INVESTIGATION.md  INFERENCE_CONTRACT.md  TRAINING_HANDOFF.md
scripts/: align_ransac.py  blink_test.py  clean_splat.py  compare_batches.py  count_batch_steps.py  diag_expert_spawn_heatmap.py  diag_gate_sweep.py  diag_label_consistency.py  eval.py  eval_grid.py  generate_lift_dataset.py  generate_task_dataset.py  genesis_body_load.py  genesis_gripper_load.py  gsplat_plates.py  host.sh  icp_splat.py  make_plates.py  merge_shards.py  multihost.sh  play.py  scripted_grasp_policy_room.py  sim2real_static_sweep.py  simpledagger.py  suite.py  tdmpc_demos.py  tdmpc_eval.py  tdmpc_train.py  test_friction_grasp.py  validate_mcap.py  verify_splat_alignment.py
src/xsim/: eval_policy.py  grasp_env.py  lift_task.py  mcap_writer.py  scripted_grasp_policy.py  scripted_lift_policy.py  scripted_stack_policy.py  success.py  task_env.py
src/xsim/algo/: __init__.py  dagger.py  distributed.py  fk.py  nets.py
src/xsim/data/: __init__.py  augs.py  memmap.py
src/xsim/policy/: __init__.py  base.py  waypoint.py
src/xsim/suite/: __init__.py
src/xsim/suite/algo/: __init__.py  cfgrl.py  gcbc.py  gcdataset.py  gcfbc.py  nets.py
src/xsim/suite/controllers/: __init__.py  controller.py  gripper.py  joint_position.py
src/xsim/suite/demos/: __init__.py  demo_random_action.py
src/xsim/suite/environments/: __init__.py  base.py  robot_env.py
src/xsim/suite/environments/manipulation/: __init__.py  lift.py  manipulation_env.py
src/xsim/suite/models/: __init__.py  cam_space.py  cameras.py  mounts.py
src/xsim/suite/models/arenas/: __init__.py  arena.py  table_arena.py
src/xsim/suite/models/grippers/: __init__.py  gripper_model.py  xarm7_gripper.py
src/xsim/suite/models/objects/: __init__.py  objects.py
src/xsim/suite/models/robots/: __init__.py  dxarm7.py  robot_model.py  xarm7.py
src/xsim/suite/models/tasks/: __init__.py  task.py
src/xsim/suite/policies/: __init__.py  dagger.py  lift.py  lift_expert.py  noise.py  waypoint.py
src/xsim/suite/renderers/: __init__.py  batch.py  nyx.py  splat_bg.py
src/xsim/suite/robots/: __init__.py  robot.py
src/xsim/suite/utils/: __init__.py  placement_samplers.py
src/xsim/suite/wrappers/: __init__.py  cartesian_action.py  delta_action.py  deviation_penalty.py  gym_wrapper.py  image_obs.py  object_velocity.py
src/xsim/utils/: __init__.py  timer.py  video.py
src/xsim/wrappers/: __init__.py  action_chunk.py  base.py  genesis_gym.py  video.py
