[build-system]
requires = ["uv_build>=0.9.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "xsim"

[tool.uv.sources]
xarm-sim = { workspace = true, editable = true }
gs-madrona = { workspace = true }
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }


[tool.uv.workspace]
members = [
    ".",
    "extra/gs-madrona",
]



[project]
name = "xarm-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "av>=17.1.0",
    "cmake>=4.4.0",
    "ffmpeg>=1.4",
    "foxglove-sdk>=0.25.1",
    "genesis-world[render]>=1.2.0",
    "gs-madrona>=0.0.7.post2",
    "gs-nyx>=0.1.3",
    "gs-nyx-plugin>=0.1.2",
    "gymnasium>=1.3.0",
    "imageio[ffmpeg]>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "jax>=0.10.2",
    "ninja>=1.13.0",
    "protobuf>=7.35.1",
    "rich>=15.0.0",
    "tensordict>=0.13.0",
    "termcolor>=3.3.0",
    "torch>=2.12.1",
    "torchrl>=0.13.2",
    "tyro>=1.0.15",
    "viser>=0.2.23",
    "webpolicy",
    "zarr>=3.1.6",
    "gsplat>=1.4.0",
    "wandb>=0.28.1",
]

[dependency-groups]
dev = [
    "xarm-sim",
]

[tool.uv]
# gs-madrona builds without isolation, so its build deps must be in the venv
# first: `uv pip install scikit-build-core nanobind ninja`, then `uv sync --inexact`.
# On hosts with several CUDA installs, FindCUDAToolkit prefers $CUDACXX over
# CUDAToolkit_ROOT, and distro libs in /usr/lib/x86_64-linux-gnu can shadow the
# toolkit's at link time (undefined __nvJitLinkCreate_* at import). Pin them:
#   CMAKE_ARGS="-DCUDA_cudart_static_LIBRARY=$CUDA_HOME/lib64/libcudart_static.a \
#     -DCUDA_nvJitLink_LIBRARY=$CUDA_HOME/lib64/libnvJitLink.so \
#     -DCUDA_NVJITLINK_LIBRARY=$CUDA_HOME/lib64/libnvJitLink.so"
no-build-isolation-package = ["gs-madrona"]
environments = ["sys_platform == 'linux'"]
override-dependencies = [
    "gs-madrona", # self-build version is 0.0.8
]

[tool.uv.extra-build-dependencies]
webpolicy = ["hatchling"]
