[build-system]
requires = ["uv_build>=0.9.15"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "xsim"

[tool.uv.sources]
xarm-sim = { workspace = true, editable = true }
gs-madrona = { workspace = true }
webpolicy = { git = "https://github.com/mhyatt000/webpolicy" }


[tool.uv.workspace]
members = [
    ".",
    "extra/gs-madrona",
]



[project]
name = "xarm-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "av>=17.1.0",
    "cmake>=4.4.0",
    "ffmpeg>=1.4",
    "foxglove-sdk>=0.25.1",
    "genesis-world[render]>=1.2.0",
    "gs-madrona>=0.0.7.post2",
    "gs-nyx>=0.1.3",
    "gs-nyx-plugin>=0.1.2",
    "gymnasium>=1.3.0",
    "imageio[ffmpeg]>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "jax>=0.10.2",
    "ninja>=1.13.0",
    "protobuf>=7.35.1",
    "rich>=15.0.0",
    "tensordict>=0.13.0",
    "termcolor>=3.3.0",
    "torch>=2.12.1",
    "torchrl>=0.13.2",
    "tyro>=1.0.15",
    "viser>=0.2.23",
    "webpolicy",
    "zarr>=3.1.6",
    "gsplat>=1.4.0",
    "wandb>=0.28.1",
    "albumentations>=2.0.8",
    "pytorch-kinematics>=0.10.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.48.0",
    "xarm-sim",
]

[tool.uv]
# gs-madrona builds without isolation, so its build deps must be in the venv
# first: `uv pip install scikit-build-core nanobind ninja`, then `uv sync --inexact`.
# On hosts with several CUDA installs, FindCUDAToolkit prefers $CUDACXX over
# CUDAToolkit_ROOT, and distro libs in /usr/lib/x86_64-linux-gnu can shadow the
# toolkit's at link time (undefined __nvJitLinkCreate_* at import). Pin them:
#   CMAKE_ARGS="-DCUDA_cudart_static_LIBRARY=$CUDA_HOME/lib64/libcudart_static.a \
#     -DCUDA_nvJitLink_LIBRARY=$CUDA_HOME/lib64/libnvJitLink.so \
#     -DCUDA_NVJITLINK_LIBRARY=$CUDA_HOME/lib64/libnvJitLink.so"
no-build-isolation-package = ["gs-madrona"]
environments = ["sys_platform == 'linux'"]
override-dependencies = [
    "gs-madrona", # self-build version is 0.0.8
]

[tool.uv.extra-build-dependencies]
webpolicy = ["hatchling"]

# task runner: `uv run poe <task> <script> [flags...]` — extra args append to
# the cmd, so any script + tyro flags pass through. GPUS/NNODES/RDZV come from
# the environment, falling back to the .default values below (poe sets a
# .default only when the var is unset, so the shell always wins); n-envs and
# batch-size are PER RANK. CXX/CC pin gsplat's JIT to the system gcc (the
# PATH's conda-forge gcc 15 links a libstdc++ newer than the system's).
# scripts/host.sh and scripts/multihost.sh are standalone equivalents for
# running without poe (same env vars and toolchain defaults).
#   GPUS=2 poe host scripts/simpledagger.py --policy image --n-envs 2048
#   poe multihost scripts/simpledagger.py ...   # on every node
[tool.poe.tasks._ngpu]
shell = "echo ${GPUS:-$(nvidia-smi -L | wc -l)}"

[tool.poe.tasks.host]
cmd = "torchrun --standalone --nproc-per-node=${NPROC}"
uses = { NPROC = "_ngpu" }
help = "torchrun, one rank per local GPU (GPUS=N to override)"

[tool.poe.tasks.host.env]
CXX.default = "/usr/bin/g++"
CC.default = "/usr/bin/gcc"
PYTORCH_CUDA_ALLOC_CONF.default = "expandable_segments:True"

[tool.poe.tasks.multihost]
cmd = "torchrun --nnodes=${NNODES} --nproc-per-node=${NPROC} --rdzv-backend=c10d --rdzv-endpoint=${RDZV}"
uses = { NPROC = "_ngpu" }
help = "torchrun across nodes (defaults NNODES=2, RDZV=gpu1:29500); run on every node"

[tool.poe.tasks.multihost.env]
NNODES.default = "2"
RDZV.default = "gpu1:29500"
CXX.default = "/usr/bin/g++"
CC.default = "/usr/bin/gcc"
PYTORCH_CUDA_ALLOC_CONF.default = "expandable_segments:True"
